# Retrieval-Augmented-Generation

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
api/: documents.py  health.py  query.py
core/: convert_to_chunks.py  execute_query.py  generate_embedding_on_chunks.py  retrieve_vector_embeddings.py  store_vector_embeddings.py  text_extractor.py
tests/test_api/: test_health_endpoint.py
tests/test_core/: test_text_extractor.py
utils/: api_response_format.py  logger.py
vector_db/: qdrant.py
